syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

import "github.com/elojah/trax/pkg/gogoproto/gogo.proto";
import "github.com/elojah/trax/pkg/pbtypes/string.proto";

import "github.com/elojah/trax/pkg/paginate/paginate.proto";
import "github.com/elojah/trax/internal/user/entity.proto";
import "github.com/elojah/trax/internal/user/role.proto";

message ListRoleReq {
	paginate.Paginate Paginate        = 1 [(gogoproto.nullable) = true];
	string Search                     = 2;
}

message ListRoleResp {
	repeated user.Role Roles          = 1 [(gogoproto.nullable) = false];
	uint64 Total                      = 2;

	// Entities key must be a user.Entity ID
	map<string, user.Entity> Entities = 3 [(gogoproto.nullable) = false];
}

